# datamanifest

./: .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
datamanifest/: __init__.py  _logging.py  datamanifest.py
docs/: design-add-s3.md
etc/: requirements.in
notebooks/: tutorial.ipynb
src/datamanifest/: __init__.py  _logging.py  config.py  datamanifest.py  main.py
test/: test_datamanifest.py
tests/: test_datamanifest.py
